[package]
name = "bbk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
futures = "0.3.28"
hex = "0.4.3"
log = "0.4"
md-5 = "0.10.5"
native-tls = "0.2.11"
openssl = "0.10.52"
rand = "0.8.5"
regex = "1.7.0"
retry = "2.0.0"

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.10.6"
tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
lto = true
