[package]
name = "bbk"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# multiplexing (wire-compatible with hashicorp/yamux)
yamux = "0.13"

# transports
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio-openssl = "0.6"
h2 = "0.4"
http = "1"
bytes = "1"

# crypto
openssl = { version = "0.10", features = ["vendored"] }
md-5 = "0.10"
rand = "0.8"

# config / cli / logging
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
colored = "2"
regex = "1"
url = "2"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
